--- a/styles/global/header.css
+++ b/styles/global/header.css
@@ -156,6 +156,7 @@
     display: none;
     background-color: var(--p-color);
     padding: 5px 50px 20px 80px;
+    box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.347);
   }
 
   .res-header nav ul li {
