--- a/styles/homepage/services.css
+++ b/styles/homepage/services.css
@@ -64,9 +64,9 @@
 }
 
 .ser-grid div:hover {
-  box-shadow: 0 0 30px rgba(0, 0, 0, 0.241);
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.344);
   transition-duration: 0.3s;
-  scale: 1.05;
+  transform: translateY(-5px);
   z-index: 1000;
 }
 
@@ -123,7 +123,12 @@
 
 @media only screen and (max-width: 770px){
   .ser-grid {
-    grid-template-columns: 350px;
+    grid-template-columns: 290px 290px;
+    grid-auto-rows: auto;
+  }
+
+  .ser-grid div {
+    padding: 80px 25px 60px 25px;
   }
   
   .ser-cont{
@@ -143,6 +148,15 @@
 @media only screen and (max-width: 640px){
   .ser-cont {
     padding: 50px 20px;
+  }
+
+  .ser-grid {
+    grid-template-columns: 350px;
+    grid-auto-rows: 350px;
+  }
+
+  .ser-grid div {
+    padding: 80px 50px 30px 50px;
   }
 
   .ser-head {
