--- a/styles/global/whatsapp.css
+++ b/styles/global/whatsapp.css
@@ -11,9 +11,79 @@
   --p-font: "Montserrat", sans-serif;
   --s-font: "Roboto", sans-serif;
 }
-
+/* #3dc454 */
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
+
+
+.whatsapp {
+  background-image: url("\\assestes/whatsappqoute.svg");
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  position: fixed;
+  bottom: 50px;
+  right: 50px;
+  translate: 500px 0px;
+  z-index: 10000;
+  display: flex;
+  padding: 20px 40px;
+  transition-duration: 0.3s;
+
+}
+
+.whatsapp h3 {
+  font-family: var(--p-font);
+  color: var(--s-color);
+  font-size: 20px;
+  font-weight: bold;
+  margin-left: 50px;
+  transition-duration: 0.3s;
+}
+
+.whatsapp h3:hover {
+  color: var(--a-color);
+  transition-duration: 0.3s;
+}
+
+.whatsapp:hover {
+  color: var(--a-color);
+  transform: translateY(-5px);
+  transition-duration: 0.3s;
+
+}
+
+
+@media only screen and (max-width: 1080px) {
+  .whatsapp {
+    bottom: 30px;
+    right: 30px;
+    padding: 15px 60px;
+
+  }
+
+  .whatsapp h3 {
+    font-size: 18px;
+    margin-left: 40px;
+  }
+}
+
+
+
+@media only screen and (max-width: 770px) {
+  .whatsapp {
+    bottom: 10px;
+    right: 10px;
+    padding: 14px 30px;
+
+  }
+
+  .whatsapp h3 {
+    font-size: 16px;
+    margin-left: 35px;
+  }
+}
+
